--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "Lenny",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "@types/redux": "^3.6.0",
     "dotenv": "^8.2.0",
     "md5": "^2.3.0",
     "mysql2": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@citizenfx/client": "*",
@@ -27,6 +31,7 @@
     "@types/md5": "^2.3.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
