[inventory] Inventory improvements

--- a/src/gui/patterns/translations.config.json
+++ b/src/gui/patterns/translations.config.json
@@ -1,48 +1,62 @@
 {
-    "en": {
-        "cash": "Cash",
-        "bank": "Bank",
-        "log-in": "Log in",
-        "welcome": "Welcome",
-        "please-log-in": "Please log in",
-        "password": "Password",
-        "password-confirmation": "Password confirmation",
-        "this-username-is-not-registered-yet": "This username is not registered yet",
-        "register": "Register",
-        "ban": "Ban",
-        "ban-player": "Ban player",
-        "kick": "Kick",
-        "kick-player": "Kick player",
-        "player-id": "Player ID",
-        "reason": "Reason",
-        "enter-a-reason": "Enter a reason",
-        "spawn-vehicle": "Spawn vehicle",
-        "vehicle": "Vehicle",
-        "spawn-weapon": "Spawn weapon",
-        "equip": "Equip",
-        "unequip": "Unequip"
-    },
-    "et": {
-        "cash": "Sula",
-          "bank": "Pank",
-          "log-in": "Logi sisse!",
-          "welcome": "Tere tulemast",
-          "please-log-in": "Palun logi sisse",
-          "password": "Parool",
-          "password-confirmation": "Kinnita parool",
-          "this-username-is-not-registered-yet": "See kasutaja nimi ei ole veel registreeritud",
-          "register": "Registreeri",
-          "ban": "Bänni",
-          "ban-player": "Bänni mängija",
-          "kick": "Löö",
-          "kick-player": "Löö mängija mängust välja",
-          "player-id": "Mängija ID",
-          "reason": "Põhjus",
-          "enter-a-reason": "Sisesta põhjus",
-          "spawn-vehicle": "Spawn vehicle",
-          "vehicle": "Vehicle",
-          "spawn-weapon": "Spawn weapon",
-          "equip": "Kasuta",
-          "unequip": "Lõpeta kasutamine"
-    }
+  "en": {
+    "cash": "Cash",
+    "bank": "Bank",
+    "log-in": "Log in",
+    "welcome": "Welcome",
+    "please-log-in": "Please log in",
+    "password": "Password",
+    "password-confirmation": "Password confirmation",
+    "this-username-is-not-registered-yet": "This username is not registered yet",
+    "register": "Register",
+    "ban": "Ban",
+    "ban-player": "Ban player",
+    "kick": "Kick",
+    "kick-player": "Kick player",
+    "player-id": "Player ID",
+    "reason": "Reason",
+    "enter-a-reason": "Enter a reason",
+    "spawn-vehicle": "Spawn vehicle",
+    "vehicle": "Vehicle",
+    "spawn-weapon": "Spawn weapon",
+    "equip": "Equip",
+    "unequip": "Unequip",
+    "smg": "Smg",
+    "carbine-rifle": "Carbine rifle",
+    "grenade": "Grenade",
+    "pistol": "Pistol",
+    "primary": "Primary",
+    "secondary": "Secondary",
+    "utility": "Utility"
+  },
+  "et": {
+    "cash": "Sula",
+    "bank": "Pank",
+    "log-in": "Logi sisse!",
+    "welcome": "Tere tulemast",
+    "please-log-in": "Palun logi sisse",
+    "password": "Parool",
+    "password-confirmation": "Kinnita parool",
+    "this-username-is-not-registered-yet": "See kasutaja nimi ei ole veel registreeritud",
+    "register": "Registreeri",
+    "ban": "Bänni",
+    "ban-player": "Bänni mängija",
+    "kick": "Löö",
+    "kick-player": "Löö mängija mängust välja",
+    "player-id": "Mängija ID",
+    "reason": "Põhjus",
+    "enter-a-reason": "Sisesta põhjus",
+    "spawn-vehicle": "Spawn vehicle",
+    "vehicle": "Vehicle",
+    "spawn-weapon": "Spawn weapon",
+    "equip": "Kasuta",
+    "unequip": "Lõpeta kasutamine",
+    "smg":  "Smg",
+    "carbine-rifle":  "Carbine rifle",
+    "grenade":  "Granaat",
+    "pistol":  "Püstol",
+    "primary":  "Primaarne",
+    "secondary": "Sekundaarne",
+    "utility": "Utiliit"
+  }
 }
