[routes] Fix more of the routes.
add change language option for register form

--- a/src/gui/patterns/translations.config.json
+++ b/src/gui/patterns/translations.config.json
@@ -27,7 +27,8 @@
     "pistol": "Pistol",
     "primary": "Primary",
     "secondary": "Secondary",
-    "utility": "Utility"
+    "utility": "Utility",
+    "choose-language": "Choose language"
   },
   "et": {
     "cash": "Sula",
@@ -57,6 +58,7 @@
     "pistol":  "Püstol",
     "primary":  "Primaarne",
     "secondary": "Sekundaarne",
-    "utility": "Utiliit"
+    "utility": "Utiliit",
+    "choose-language": "Vali keel"
   }
 }
